pkg/front_end/testcases/inference/infer_type_on_var.dart.strong.expect
library test;
import self as self;
import "dart:core" as core;

static method test1() → dynamic {
  core::int x = 3;
  x = let dynamic _ = null in let final dynamic #t1 = let dynamic _ = null in invalid-expression "pkg/front_end/testcases/inference/infer_type_on_var.dart:10:36: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.
Try changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.
  x = /*error:INVALID_ASSIGNMENT*/ \"hi\";
                                   ^" in let final dynamic #t2 = "hi" in null;
}
static method main() → dynamic {}
